# wireconf

./: .gitignore  pyproject.toml  wg0.conf
app/: main.py
app/cli/: server.py
app/config/: database_config.py  db.py
app/internal/: db.py  repository.py  wireguard.py
app/templates/client/: client.conf
app/templates/server/: peer.conf  server.conf
wireconf/: main.py
wireconf/cli/: __init__.py  cli.py  client.py  main.py  server.py
wireconf/config/: database.py  database_config.py  exeptions.py
wireconf/internal/: cmd.py  files.py  keys.py  repository.py  validators.py  wireguard.py
wireconf/templates/client/: client.conf
wireconf/templates/server/: server.conf
