[tool.poetry]
name = "wireconf"
version = "0.1.0"
description = ""
authors = ["jsusmachaca <falcorgd@gmail.com>"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
qrcode = "^8.0"
readchar = "^4.2.1"
flake8 = "^7.1.1"
pygments = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
